src/objects/Email_address__c/Email_address__c.object-meta.xml
<CustomObject>
    <description>This is the custom Object for Custom redesign functionality</description>
    <label>Email address</label>
    <nameField>
        <displayFormat>EM-{0000}</displayFormat>
        <label>Email address  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>