src/objects/Email_address__c/fields/MailBox_Id__c.field-meta.xml
<CustomField>
    <fullName>MailBox_Id__c</fullName>
    <label>MailBox Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>