src/objects/Email_address__c/fields/MailBox_Name__c.field-meta.xml
<CustomField>
    <fullName>MailBox_Name__c</fullName>
    <label>MailBox Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>